--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
     "csv-parser": "^3.0.0"
-  }
+  },
+  "name": "personal-finance-tools",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YihuanDong/personal-finance-tools.git"
+  },
+  "keywords": [],
+  "author": "",
+  "type":"module",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/YihuanDong/personal-finance-tools/issues"
+  },
+  "homepage": "https://github.com/YihuanDong/personal-finance-tools#readme"
 }
