--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0"
   },
   "name": "personal-finance-tools",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,8 +15,7 @@
     "url": "git+https://github.com/YihuanDong/personal-finance-tools.git"
   },
   "keywords": [],
-  "author": "",
-  "type":"module",
+  "author": "Yihuan Dong",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/YihuanDong/personal-finance-tools/issues"
